--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <ul>
             <li class="word">
                 <div class="details">
-                    <p>Happy</p>
-                    <span>adjective /'hapi/</span>
+                    <p>_</p>
+                    <span>___</span>
                 </div>
                 <i class="fas fa-volume-up"></i>
             </li>
@@ -30,24 +30,19 @@
                 <li class="meaning">
                     <div class="details">
                         <p>Meaning</p>
-                        <span>feeling or showing pleasure or contentment</span>
+                        <span>___</span>
                     </div>
                 </li>
                 <li class="example">
                     <div class="details">
                         <p>Example</p>
-                        <span>He is coming happy and excited</span>
+                        <span>___</span>
                     </div>
                 </li>
                 <li class="synonyms">
                     <div class="details">
                         <p>Synonyms</p>
                         <div class="list">
-                            <span>glad,</span>
-                            <span>cheerful,</span>
-                            <span>delighted,</span>
-                            <span>joyful,</span>
-                            <span>contented</span>
                         </div>
                     </div>
                 </li>
